// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery should render component with 3 images 1`] = `
<div>
  <div
    class="str-chat__gallery str-chat__gallery-two-rows"
  >
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
  </div>
</div>
`;

exports[`Gallery should render component with 4 images 1`] = `
<div>
  <div
    class="str-chat__gallery str-chat__gallery--square str-chat__gallery-two-rows"
  >
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
  </div>
</div>
`;

exports[`Gallery should render component with 5 images 1`] = `
<div>
  <div
    class="str-chat__gallery str-chat__gallery--square str-chat__gallery-two-rows"
  >
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
    <button
      class="str-chat__gallery-placeholder"
      data-testid="gallery-image-last"
      style="background-image: url(undefined);"
    >
      <p>
        {{ imageCount }} more
      </p>
    </button>
  </div>
</div>
`;

exports[`Gallery should render component with default props 1`] = `
<div>
  <div
    class="str-chat__gallery"
  >
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
    <button
      class="str-chat__gallery-image"
      data-testid="gallery-image"
    >
      <img
        alt="User uploaded content"
        class="str-chat__base-image"
        data-testid="str-chat__base-image"
        src="about:blank"
        title="User uploaded content"
      />
    </button>
  </div>
</div>
`;

exports[`Gallery should render custom BaseImage component 1`] = `
<div>
  <div
    class="str-chat messaging light str-chat__channel"
    id="str-chat__channel"
  >
    <div
      class="str-chat__container"
    >
      <div
        class="str-chat__gallery"
      >
        <button
          class="str-chat__gallery-image"
          data-testid="gallery-image"
        >
          <img
            alt="fallback-0"
            data-testid="custom-base-image"
            src="image_url-0"
            title="fallback-0"
          />
        </button>
        <button
          class="str-chat__gallery-image"
          data-testid="gallery-image"
        >
          <img
            alt="fallback-1"
            data-testid="custom-base-image"
            src="image_url-1"
            title="fallback-1"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
